--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Project's name
-PROJECT (lunabotics2020)
+PROJECT (lunabotics2022)
 
 # Specify the minimum version for CMake
 cmake_minimum_required(VERSION 3.1)
@@ -26,3 +26,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package()
 
 include_directories (src include ${catkin_INCLUDE_DIRS})
+
+add_executable(bhagyapublisher ${PROJECT_SOURCE_DIR}/bhagyapublisher.cpp)
+
+target_link_libraries(bhagyapublisher ${catkin_LIBRARIES})
