--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(catkin REQUIRED)
 find_package (Threads REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
+
 	roscpp
 	rospy
 	std_msgs
@@ -26,3 +27,11 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package()
 
 include_directories (src include ${catkin_INCLUDE_DIRS})
+
+add_executable(landonTalker ${PROJECT_SOURCE_DIR}/src/landonTalker.cpp)
+target_link_libraries(landonTalker ${catkin_LIBRARIES} Threads::Threads)
+
+add_executable(landonListener ${PROJECT_SOURCE_DIR}/src/landonListener.cpp)
+target_link_libraries(landonListener ${catkin_LIBRARIES} Threads::Threads)
+
+
