--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,11 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package()
 
 include_directories (src include ${catkin_INCLUDE_DIRS})
+
+add_executable(tf_broadcaster ${PROJECT_SOURCE_DIR}/robot_setup_tf/src/tf_broadcaster.cpp)
+add_executable(tf_listener ${PROJECT_SOURCE_DIR}/robot_setup_tf/src/tf_listener.cpp)
+target_link_libraries(tf_broadcaster ${catkin_LIBRARIES})
+target_link_libraries(tf_listener ${catkin_LIBRARIES})
+
+
+
