this doesn't work but Bhagya told me to push

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,3 +28,7 @@ catkin_package()
 include_directories (src include ${catkin_INCLUDE_DIRS})
 add_executable(DriveController ${PROJECT_SOURCE_DIR}/src/DriveController.cpp)
 target_link_libraries(DriveController ${catkin_LIBRARIES})
+
+add_executable(ExcvDriveBaseHW ${PROJECT_SOURCE_DIR}/src/ExcvDriveBaseHW.cpp)
+target_link_libraries(ExcvDriveBaseHW ${catkin_LIBRARIES})
+
