renamed files and added listner for wheelpos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,14 +27,14 @@ catkin_package()
 
 include_directories (src include ${catkin_INCLUDE_DIRS})
 
-add_executable(DriveController ${PROJECT_SOURCE_DIR}/src/DriveController.cpp)
-add_executable(ExcvDriveBaseHW ${PROJECT_SOURCE_DIR}/src/ExcvDriveBaseHW.cpp)
+add_executable(ManualDriveController ${PROJECT_SOURCE_DIR}/src/ManualDriveController.cpp)
+add_executable(ManualDriveBase ${PROJECT_SOURCE_DIR}/src/ManualDriveBase.cpp)
 
 target_link_libraries(DriveController ${catkin_LIBRARIES} Threads::Threads)
-target_link_libraries(ExcvDriveBaseHW ${catkin_LIBRARIES} Threads::Threads)
+target_link_libraries(ManualDriveBase ${catkin_LIBRARIES} Threads::Threads)
 
-target_link_libraries(ExcvDriveBaseHW ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_Phoenix.a)
-target_link_libraries(ExcvDriveBaseHW ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCCI.a)
-target_link_libraries(ExcvDriveBaseHW ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixPlatformLinuxSocketCan.a)
-target_link_libraries(ExcvDriveBaseHW ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCanutils.a)
+target_link_libraries(ManualDriveBase ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_Phoenix.a)
+target_link_libraries(ManualDriveBase ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCCI.a)
+target_link_libraries(ManualDriveBase ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixPlatformLinuxSocketCan.a)
+target_link_libraries(ManualDriveBase ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCanutils.a)
 
