--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,12 @@ include_directories (src include ${catkin_INCLUDE_DIRS})
 add_executable(ManualDriveController ${PROJECT_SOURCE_DIR}/src/ManualDriveController.cpp)
 add_executable(ManualDriveBase ${PROJECT_SOURCE_DIR}/src/ManualDriveBase.cpp)
 add_executable(AugerControl ${PROJECT_SOURCE_DIR}/src/AugerControl.cpp)
+add_executable(AugerPosition ${PROJECT_SOURCE_DIR}/src/AugerPosition.cpp)
 
 target_link_libraries(ManualDriveController ${catkin_LIBRARIES} Threads::Threads)
 target_link_libraries(ManualDriveBase ${catkin_LIBRARIES} Threads::Threads)
 target_link_libraries(AugerControl ${catkin_LIBRARIES} Threads::Threads)
+target_link_libraries(AugerPosition ${catkin_LIBRARIES} Threads::Threads)
 
 
 target_link_libraries(ManualDriveBase ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_Phoenix.a)
