--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,13 @@ include_directories (src include ${catkin_INCLUDE_DIRS})
 add_executable(ManualDriveController ${PROJECT_SOURCE_DIR}/src/ManualDriveController.cpp)
 add_executable(ManualDriveBase ${PROJECT_SOURCE_DIR}/src/ManualDriveBase.cpp)
 add_executable(AugerControl ${PROJECT_SOURCE_DIR}/src/AugerControl.cpp)
+add_executable(DumperMotor ${PROJECT_SOURCE_DIR}/src/DumperMotor.cpp)
+
 
 target_link_libraries(ManualDriveController ${catkin_LIBRARIES} Threads::Threads)
 target_link_libraries(ManualDriveBase ${catkin_LIBRARIES} Threads::Threads)
 target_link_libraries(AugerControl ${catkin_LIBRARIES} Threads::Threads)
+target_link_libraries(DumperMotor ${catkin_LIBRARIES} Threads::Threads)
 
 
 target_link_libraries(ManualDriveBase ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_Phoenix.a)
@@ -46,4 +49,7 @@ target_link_libraries(AugerControl ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_Phoe
 target_link_libraries(AugerControl ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixPlatformLinuxSocketCan.a)
 target_link_libraries(AugerControl ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCanutils.a)
 
-
+target_link_libraries(DumperMotor ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_Phoenix.a)
+target_link_libraries(DumperMotor ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCCI.a)
+target_link_libraries(DumperMotor ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixPlatformLinuxSocketCan.a)
+target_link_libraries(DumperMotor ${PROJECT_SOURCE_DIR}/lib/x86-64/libCTRE_PhoenixCanutils.a)
